force-app/main/default/objects/TemplateMessage__mdt/TemplateMessage__mdt.object-meta.xml
<CustomObject>
    <label>Template Message</label>
    <pluralLabel>Template Message</pluralLabel>
</CustomObject>