force-app/main/default/objects/TemplateMessage__mdt/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Papéis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>