force-app/main/default/objects/TemplateMessage__mdt/fields/TemplateMessage__c.field-meta.xml
<CustomField>
    <fullName>TemplateMessage__c</fullName>
    <label>TemplateMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>