force-app/main/default/objects/TemplateMessage__mdt/fields/TemplateType__c.field-meta.xml
<CustomField>
    <fullName>TemplateType__c</fullName>
    <label>TemplateType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
                <default>true</default>
                <label>Fixa</label>
            </value>
            <value>
                <fullName>Movel</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Alta Movel</fullName>
            </value>
            <value>
                <fullName>Alta Fixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>